// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Story Snapshots > AllOptional 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-md"
      data-form-is-valid="true"
      data-testid=""
    >
      <div
        class="overflow-hidden rounded-small border bg-content1 transition-colors duration-150 motion-reduce:transition-none border-divider"
      >
        <div
          aria-level="3"
          class="pointer-events-auto! static! z-auto! block! w-full! translate-x-0! translate-y-0! transform-none! rounded-t-small border-b p-3 font-semibold text-medium transition-colors duration-150 motion-reduce:transition-none border-divider text-foreground"
          data-slot="label"
          for="react-aria-«replaced-aria-id»"
          id="react-aria-«replaced-aria-id»"
          role="heading"
        >
          Your Hobbies
        </div>
        <div
          class="p-3 grid gap-4"
        >
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
            data-filled="true"
            data-filled-within="true"
            data-has-elements="true"
            data-has-helper="true"
            data-has-label="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <label
                  class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                  data-slot="label"
                  for="hobbies_favorite"
                  id="react-aria-«replaced-aria-id»"
                >
                  Favorite Hobby
                </label>
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label="Favorite Hobby"
                    aria-labelledby="hobbies_favorite react-aria-«replaced-aria-id»"
                    autocomplete="off"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                    data-slot="input"
                    data-testid="hobbies_favorite"
                    id="hobbies_favorite"
                    name="hobbies.favorite"
                    placeholder=" "
                    tabindex="0"
                    title=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
            data-filled="true"
            data-filled-within="true"
            data-has-elements="true"
            data-has-helper="true"
            data-has-label="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <label
                  class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                  data-slot="label"
                  for="hobbies_secondary"
                  id="react-aria-«replaced-aria-id»"
                >
                  Secondary Hobby
                </label>
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label="Secondary Hobby"
                    aria-labelledby="hobbies_secondary react-aria-«replaced-aria-id»"
                    autocomplete="off"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                    data-slot="input"
                    data-testid="hobbies_secondary"
                    id="hobbies_secondary"
                    name="hobbies.secondary"
                    placeholder=" "
                    tabindex="0"
                    title=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > CrossFieldValidation 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-md"
      data-form-is-valid="false"
      data-testid=""
    >
      <div
        class="overflow-hidden rounded-small border bg-content1 transition-colors duration-150 motion-reduce:transition-none border-divider"
      >
        <div
          aria-level="3"
          class="pointer-events-auto! static! z-auto! block! w-full! translate-x-0! translate-y-0! transform-none! rounded-t-small border-b p-3 font-semibold text-medium transition-colors duration-150 motion-reduce:transition-none border-divider text-foreground"
          data-slot="label"
          for="react-aria-«replaced-aria-id»"
          id="react-aria-«replaced-aria-id»"
          role="heading"
        >
          Secret Identity Registration
          <span
            aria-hidden="true"
            class="ml-0.5 text-danger"
          >
            *
          </span>
        </div>
        <div
          class="p-3 grid gap-4"
        >
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
            data-filled="true"
            data-filled-within="true"
            data-has-elements="true"
            data-has-helper="true"
            data-has-label="true"
            data-has-value="true"
            data-required="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus is-filled"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <label
                  class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                  data-slot="label"
                  for="identity_realname"
                  id="react-aria-«replaced-aria-id»"
                >
                  Real Name
                </label>
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label="Real Name"
                    aria-labelledby="identity_realname react-aria-«replaced-aria-id»"
                    autocomplete="off"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small is-filled"
                    data-filled="true"
                    data-filled-within="true"
                    data-slot="input"
                    data-testid="identity_realname"
                    id="identity_realname"
                    name="identity.realName"
                    placeholder=" "
                    required=""
                    tabindex="0"
                    title=""
                    type="text"
                    value="Bruce"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
            data-filled="true"
            data-filled-within="true"
            data-has-elements="true"
            data-has-helper="true"
            data-has-label="true"
            data-has-value="true"
            data-hover="true"
            data-required="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus is-filled"
                data-hover="true"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <label
                  class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                  data-slot="label"
                  for="identity_heroname"
                  id="react-aria-«replaced-aria-id»"
                >
                  Hero Name
                </label>
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label="Hero Name"
                    aria-labelledby="identity_heroname react-aria-«replaced-aria-id»"
                    autocomplete="off"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small is-filled"
                    data-filled="true"
                    data-filled-within="true"
                    data-slot="input"
                    data-testid="identity_heroname"
                    id="identity_heroname"
                    name="identity.heroName"
                    placeholder=" "
                    required=""
                    tabindex="0"
                    title=""
                    type="text"
                    value="Bruce"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
            data-filled="true"
            data-filled-within="true"
            data-focus="true"
            data-focus-visible="true"
            data-focus-within="true"
            data-has-elements="true"
            data-has-helper="true"
            data-has-label="true"
            data-required="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
                data-focus="true"
                data-focus-visible="true"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <label
                  class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                  data-slot="label"
                  for="identity_email"
                  id="react-aria-«replaced-aria-id»"
                >
                  Official Email
                </label>
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label="Official Email"
                    aria-labelledby="identity_email react-aria-«replaced-aria-id»"
                    autocomplete="off"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                    data-filled-within="true"
                    data-slot="input"
                    data-testid="identity_email"
                    id="identity_email"
                    name="identity.email"
                    placeholder=" "
                    required=""
                    tabindex="0"
                    title=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="overflow: hidden;"
        >
          <div
            class="group-data-[has-helper=true]:flex relative flex-col gap-1.5 p-0 border-t block px-3 pb-2 pt-1 transition-colors duration-150 motion-reduce:transition-none border-divider"
            data-slot="helper-wrapper"
          >
            <div
              class="!text-foreground-500 text-tiny"
              data-slot="error-message"
            >
              <ul
                aria-label="Validation errors of field identity"
                data-testid="identity_error"
              >
                <li
                  style="overflow: hidden;"
                >
                  <div
                    class="px-1 pt-1"
                  >
                    Your secret identity isn't very secret if names match!
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > Default 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-md"
      data-form-is-valid="false"
      data-testid=""
    >
      <div
        class="overflow-hidden rounded-small border bg-content1 transition-colors duration-150 motion-reduce:transition-none border-divider"
      >
        <div
          aria-level="3"
          class="pointer-events-auto! static! z-auto! block! w-full! translate-x-0! translate-y-0! transform-none! rounded-t-small border-b p-3 font-semibold text-medium transition-colors duration-150 motion-reduce:transition-none border-divider text-foreground"
          data-slot="label"
          for="react-aria-«replaced-aria-id»"
          id="react-aria-«replaced-aria-id»"
          role="heading"
        >
          Pizza Delivery Address
          <span
            aria-hidden="true"
            class="ml-0.5 text-danger"
          >
            *
          </span>
        </div>
        <div
          class="p-3 grid gap-4"
        >
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
            data-filled="true"
            data-filled-within="true"
            data-has-elements="true"
            data-has-helper="true"
            data-has-label="true"
            data-required="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <label
                  class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                  data-slot="label"
                  for="delivery_street"
                  id="react-aria-«replaced-aria-id»"
                >
                  Street
                </label>
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label="Street"
                    aria-labelledby="delivery_street react-aria-«replaced-aria-id»"
                    autocomplete="off"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                    data-slot="input"
                    data-testid="delivery_street"
                    id="delivery_street"
                    name="delivery.street"
                    placeholder=" "
                    required=""
                    tabindex="0"
                    title=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
            data-filled="true"
            data-filled-within="true"
            data-has-elements="true"
            data-has-helper="true"
            data-has-label="true"
            data-required="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <label
                  class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                  data-slot="label"
                  for="delivery_city"
                  id="react-aria-«replaced-aria-id»"
                >
                  City
                </label>
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label="City"
                    aria-labelledby="delivery_city react-aria-«replaced-aria-id»"
                    autocomplete="off"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                    data-slot="input"
                    data-testid="delivery_city"
                    id="delivery_city"
                    name="delivery.city"
                    placeholder=" "
                    required=""
                    tabindex="0"
                    title=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
            data-filled="true"
            data-filled-within="true"
            data-has-elements="true"
            data-has-helper="true"
            data-has-label="true"
            data-required="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <label
                  class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                  data-slot="label"
                  for="delivery_phone"
                  id="react-aria-«replaced-aria-id»"
                >
                  Phone
                </label>
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label="Phone"
                    aria-labelledby="delivery_phone react-aria-«replaced-aria-id»"
                    autocomplete="off"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                    data-slot="input"
                    data-testid="delivery_phone"
                    id="delivery_phone"
                    name="delivery.phone"
                    placeholder=" "
                    required=""
                    tabindex="0"
                    title=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > EdgeCaseOptionalFieldTouched 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-md"
      data-form-is-valid="false"
      data-testid=""
    >
      <div
        class="overflow-hidden rounded-small border bg-content1 transition-colors duration-150 motion-reduce:transition-none border-divider"
      >
        <div
          aria-level="3"
          class="pointer-events-auto! static! z-auto! block! w-full! translate-x-0! translate-y-0! transform-none! rounded-t-small border-b p-3 font-semibold text-medium transition-colors duration-150 motion-reduce:transition-none border-divider text-foreground"
          data-slot="label"
          for="react-aria-«replaced-aria-id»"
          id="react-aria-«replaced-aria-id»"
          role="heading"
        >
          User Profile
          <span
            aria-hidden="true"
            class="ml-0.5 text-danger"
          >
            *
          </span>
        </div>
        <div
          class="p-3 grid gap-4"
        >
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
            data-filled="true"
            data-filled-within="true"
            data-has-elements="true"
            data-has-helper="true"
            data-has-label="true"
            data-required="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <label
                  class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                  data-slot="label"
                  for="user_username"
                  id="react-aria-«replaced-aria-id»"
                >
                  Username
                </label>
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label="Username"
                    aria-labelledby="user_username react-aria-«replaced-aria-id»"
                    autocomplete="off"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                    data-slot="input"
                    data-testid="user_username"
                    id="user_username"
                    name="user.username"
                    placeholder=" "
                    required=""
                    tabindex="0"
                    title=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
            data-filled="true"
            data-filled-within="true"
            data-has-elements="true"
            data-has-helper="true"
            data-has-label="true"
            data-hover="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
                data-hover="true"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <label
                  class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                  data-slot="label"
                  for="user_nickname"
                  id="react-aria-«replaced-aria-id»"
                >
                  Nickname (optional)
                </label>
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label="Nickname (optional)"
                    aria-labelledby="user_nickname react-aria-«replaced-aria-id»"
                    autocomplete="off"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                    data-slot="input"
                    data-testid="user_nickname"
                    id="user_nickname"
                    name="user.nickname"
                    placeholder=" "
                    tabindex="0"
                    title=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-focus="true"
          data-focus-visible="true"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > ErrorStylingBehavior 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-md"
      data-form-is-valid="false"
      data-testid=""
    >
      <div
        class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] mb-4 is-filled"
        data-filled="true"
        data-filled-within="true"
        data-has-elements="true"
        data-has-helper="true"
        data-has-label="true"
        data-has-value="true"
        data-slot="base"
      >
        <div
          class="h-full flex flex-col"
          data-slot="main-wrapper"
        >
          <div
            class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus is-filled"
            data-slot="input-wrapper"
            style="cursor: text;"
          >
            <label
              class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
              data-slot="label"
              for="trigger"
              id="react-aria-«replaced-aria-id»"
            >
              Type here to trigger validation
            </label>
            <div
              class="inline-flex w-full items-center h-full box-border"
              data-slot="inner-wrapper"
            >
              <input
                aria-label="Type here to trigger validation"
                aria-labelledby="trigger react-aria-«replaced-aria-id»"
                autocomplete="off"
                class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small is-filled"
                data-filled="true"
                data-filled-within="true"
                data-slot="input"
                data-testid="trigger"
                id="trigger"
                name="trigger"
                placeholder=" "
                tabindex="0"
                title=""
                type="text"
                value="hello"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="overflow-hidden rounded-small border bg-content1 transition-colors duration-150 motion-reduce:transition-none border-danger-200"
      >
        <div
          aria-level="3"
          class="pointer-events-auto! static! z-auto! block! w-full! translate-x-0! translate-y-0! transform-none! rounded-t-small border-b p-3 font-semibold text-medium transition-colors duration-150 motion-reduce:transition-none border-danger-200 text-danger"
          data-slot="label"
          for="react-aria-«replaced-aria-id»"
          id="react-aria-«replaced-aria-id»"
          role="heading"
        >
          Backup Contacts
        </div>
        <div
          class="p-3 grid gap-4"
        >
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
            data-filled="true"
            data-filled-within="true"
            data-has-elements="true"
            data-has-helper="true"
            data-has-label="true"
            data-hover="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
                data-hover="true"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <label
                  class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                  data-slot="label"
                  for="contacts_email"
                  id="react-aria-«replaced-aria-id»"
                >
                  Email
                </label>
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label="Email"
                    aria-labelledby="contacts_email react-aria-«replaced-aria-id»"
                    autocomplete="off"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                    data-slot="input"
                    data-testid="contacts_email"
                    id="contacts_email"
                    name="contacts.email"
                    placeholder=" "
                    tabindex="0"
                    title=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
            data-filled="true"
            data-filled-within="true"
            data-focus="true"
            data-focus-visible="true"
            data-focus-within="true"
            data-has-elements="true"
            data-has-helper="true"
            data-has-label="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
                data-focus="true"
                data-focus-visible="true"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <label
                  class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                  data-slot="label"
                  for="contacts_phone"
                  id="react-aria-«replaced-aria-id»"
                >
                  Phone
                </label>
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label="Phone"
                    aria-labelledby="contacts_phone react-aria-«replaced-aria-id»"
                    autocomplete="off"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                    data-filled-within="true"
                    data-slot="input"
                    data-testid="contacts_phone"
                    id="contacts_phone"
                    name="contacts.phone"
                    placeholder=" "
                    tabindex="0"
                    title=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="overflow: hidden;"
        >
          <div
            class="group-data-[has-helper=true]:flex relative flex-col gap-1.5 p-0 border-t block px-3 pb-2 pt-1 transition-colors duration-150 motion-reduce:transition-none border-danger-200"
            data-slot="helper-wrapper"
          >
            <div
              class="!text-danger text-tiny"
              data-slot="error-message"
              id="react-aria-«replaced-aria-id»"
            >
              <ul
                aria-label="Validation errors of field contacts"
                data-testid="contacts_error"
              >
                <li
                  style="overflow: hidden;"
                >
                  <div
                    class="px-1 pt-1"
                  >
                    Provide at least one way to reach you (email or phone)
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > ObjectLevelError 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-md"
      data-form-is-valid="false"
      data-testid=""
    >
      <div
        class="overflow-hidden rounded-small border bg-content1 transition-colors duration-150 motion-reduce:transition-none border-danger-200"
      >
        <div
          aria-level="3"
          class="pointer-events-auto! static! z-auto! block! w-full! translate-x-0! translate-y-0! transform-none! rounded-t-small border-b p-3 font-semibold text-medium transition-colors duration-150 motion-reduce:transition-none border-danger-200 text-danger"
          data-slot="label"
          for="react-aria-«replaced-aria-id»"
          id="react-aria-«replaced-aria-id»"
          role="heading"
        >
          Build Your Taco
          <span
            aria-hidden="true"
            class="ml-0.5 text-danger"
          >
            *
          </span>
        </div>
        <div
          class="p-3 grid gap-4"
        >
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
            data-filled="true"
            data-filled-within="true"
            data-has-elements="true"
            data-has-helper="true"
            data-has-label="true"
            data-has-value="true"
            data-required="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus is-filled"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <label
                  class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                  data-slot="label"
                  for="taco_shell"
                  id="react-aria-«replaced-aria-id»"
                >
                  Shell Type
                </label>
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label="Shell Type"
                    aria-labelledby="taco_shell react-aria-«replaced-aria-id»"
                    autocomplete="off"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small is-filled"
                    data-filled="true"
                    data-filled-within="true"
                    data-slot="input"
                    data-testid="taco_shell"
                    id="taco_shell"
                    name="taco.shell"
                    placeholder=" "
                    required=""
                    tabindex="0"
                    title=""
                    type="text"
                    value="c"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
            data-filled="true"
            data-filled-within="true"
            data-has-elements="true"
            data-has-helper="true"
            data-has-label="true"
            data-has-value="true"
            data-required="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus is-filled"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <label
                  class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                  data-slot="label"
                  for="taco_protein"
                  id="react-aria-«replaced-aria-id»"
                >
                  Protein
                </label>
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label="Protein"
                    aria-labelledby="taco_protein react-aria-«replaced-aria-id»"
                    autocomplete="off"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small is-filled"
                    data-filled="true"
                    data-filled-within="true"
                    data-slot="input"
                    data-testid="taco_protein"
                    id="taco_protein"
                    name="taco.protein"
                    placeholder=" "
                    required=""
                    tabindex="0"
                    title=""
                    type="text"
                    value="b"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
            data-filled="true"
            data-filled-within="true"
            data-has-elements="true"
            data-has-helper="true"
            data-has-label="true"
            data-hover="true"
            data-invalid="true"
            data-required="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none !border-danger group-data-[focus=true]:!border-danger bg-content1 group-data-[focus=true]:border-focus"
                data-hover="true"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <label
                  class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 !text-danger after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                  data-slot="label"
                  for="taco_salsa"
                  id="react-aria-«replaced-aria-id»"
                >
                  Salsa
                </label>
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-describedby="react-aria-«replaced-aria-id»"
                    aria-invalid="true"
                    aria-label="Salsa"
                    aria-labelledby="taco_salsa react-aria-«replaced-aria-id»"
                    autocomplete="off"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small !placeholder:text-danger !text-danger"
                    data-slot="input"
                    data-testid="taco_salsa"
                    id="taco_salsa"
                    name="taco.salsa"
                    placeholder=" "
                    required=""
                    tabindex="0"
                    title=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class="hidden group-data-[has-helper=true]:flex relative flex-col gap-1.5 p-0"
                data-slot="helper-wrapper"
              >
                <div
                  class="text-tiny text-danger"
                  data-slot="error-message"
                  id="react-aria-«replaced-aria-id»"
                >
                  <ul
                    aria-label="Validation errors of field taco_salsa"
                    data-testid="taco_salsa_error"
                  >
                    <li
                      style="overflow: hidden;"
                    >
                      <div
                        class="px-1 pt-1"
                      >
                        Field is required
                      </div>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="overflow: hidden;"
        >
          <div
            class="group-data-[has-helper=true]:flex relative flex-col gap-1.5 p-0 border-t block px-3 pb-2 pt-1 transition-colors duration-150 motion-reduce:transition-none border-danger-200"
            data-slot="helper-wrapper"
          >
            <div
              class="!text-danger text-tiny"
              data-slot="error-message"
              id="react-aria-«replaced-aria-id»"
            >
              <ul
                aria-label="Validation errors of field taco"
                data-testid="taco_error"
              >
                <li
                  style="overflow: hidden;"
                >
                  <div
                    class="px-1 pt-1"
                  >
                    A proper taco needs shell, protein, AND salsa!
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-focus="true"
          data-focus-visible="true"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > Required 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-md"
      data-form-is-valid="false"
      data-testid=""
    >
      <div
        class="overflow-hidden rounded-small border bg-content1 transition-colors duration-150 motion-reduce:transition-none border-divider"
      >
        <div
          aria-level="3"
          class="pointer-events-auto! static! z-auto! block! w-full! translate-x-0! translate-y-0! transform-none! rounded-t-small border-b p-3 font-semibold text-medium transition-colors duration-150 motion-reduce:transition-none border-divider text-foreground"
          data-slot="label"
          for="react-aria-«replaced-aria-id»"
          id="react-aria-«replaced-aria-id»"
          role="heading"
        >
          Space Mission Crew
          <span
            aria-hidden="true"
            class="ml-0.5 text-danger"
          >
            *
          </span>
        </div>
        <div
          class="p-3 grid gap-4"
        >
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
            data-filled="true"
            data-filled-within="true"
            data-has-elements="true"
            data-has-helper="true"
            data-has-label="true"
            data-required="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <label
                  class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                  data-slot="label"
                  for="mission_commander"
                  id="react-aria-«replaced-aria-id»"
                >
                  Commander
                </label>
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label="Commander"
                    aria-labelledby="mission_commander react-aria-«replaced-aria-id»"
                    autocomplete="off"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                    data-slot="input"
                    data-testid="mission_commander"
                    id="mission_commander"
                    name="mission.commander"
                    placeholder=" "
                    required=""
                    tabindex="0"
                    title=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)]"
            data-filled="true"
            data-filled-within="true"
            data-has-elements="true"
            data-has-helper="true"
            data-has-label="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <label
                  class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                  data-slot="label"
                  for="mission_pilot"
                  id="react-aria-«replaced-aria-id»"
                >
                  Pilot
                </label>
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label="Pilot"
                    aria-labelledby="mission_pilot react-aria-«replaced-aria-id»"
                    autocomplete="off"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small"
                    data-slot="input"
                    data-testid="mission_pilot"
                    id="mission_pilot"
                    name="mission.pilot"
                    placeholder=" "
                    tabindex="0"
                    title=""
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`Story Snapshots > WithInitialValues 1`] = `
<div>
  <div
    class="flex w-full flex-row justify-between gap-6"
  >
    <form
      class="grow min-w-md"
      data-form-is-valid="false"
      data-testid=""
    >
      <div
        class="overflow-hidden rounded-small border bg-content1 transition-colors duration-150 motion-reduce:transition-none border-divider"
      >
        <div
          aria-level="3"
          class="pointer-events-auto! static! z-auto! block! w-full! translate-x-0! translate-y-0! transform-none! rounded-t-small border-b p-3 font-semibold text-medium transition-colors duration-150 motion-reduce:transition-none border-divider text-foreground"
          data-slot="label"
          for="react-aria-«replaced-aria-id»"
          id="react-aria-«replaced-aria-id»"
          role="heading"
        >
          Saved Delivery Address
          <span
            aria-hidden="true"
            class="ml-0.5 text-danger"
          >
            *
          </span>
        </div>
        <div
          class="p-3 grid gap-4"
        >
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
            data-filled="true"
            data-filled-within="true"
            data-has-elements="true"
            data-has-helper="true"
            data-has-label="true"
            data-has-value="true"
            data-required="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus is-filled"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <label
                  class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                  data-slot="label"
                  for="delivery_street"
                  id="react-aria-«replaced-aria-id»"
                >
                  Street
                </label>
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label="Street"
                    aria-labelledby="delivery_street react-aria-«replaced-aria-id»"
                    autocomplete="off"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small is-filled"
                    data-filled="true"
                    data-filled-within="true"
                    data-slot="input"
                    data-testid="delivery_street"
                    id="delivery_street"
                    name="delivery.street"
                    placeholder=" "
                    required=""
                    tabindex="0"
                    title=""
                    type="text"
                    value="742 Evergreen Terrace"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
            data-filled="true"
            data-filled-within="true"
            data-has-elements="true"
            data-has-helper="true"
            data-has-label="true"
            data-has-value="true"
            data-required="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus is-filled"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <label
                  class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                  data-slot="label"
                  for="delivery_city"
                  id="react-aria-«replaced-aria-id»"
                >
                  City
                </label>
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label="City"
                    aria-labelledby="delivery_city react-aria-«replaced-aria-id»"
                    autocomplete="off"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small is-filled"
                    data-filled="true"
                    data-filled-within="true"
                    data-slot="input"
                    data-testid="delivery_city"
                    id="delivery_city"
                    name="delivery.city"
                    placeholder=" "
                    required=""
                    tabindex="0"
                    title=""
                    type="text"
                    value="Springfield"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="group flex flex-col data-[hidden=true]:hidden w-full relative justify-end data-[has-label=true]:mt-[calc(var(--heroui-font-size-small)_+_10px)] is-filled"
            data-filled="true"
            data-filled-within="true"
            data-has-elements="true"
            data-has-helper="true"
            data-has-label="true"
            data-has-value="true"
            data-required="true"
            data-slot="base"
          >
            <div
              class="h-full flex flex-col"
              data-slot="main-wrapper"
            >
              <div
                class="relative w-full inline-flex tap-highlight-transparent flex-row items-center shadow-xs px-3 gap-3 border-medium border-default-200 data-[hover=true]:border-default-400 h-10 min-h-10 rounded-small !duration-150 transition-colors motion-reduce:transition-none bg-content1 group-data-[focus=true]:border-focus is-filled"
                data-slot="input-wrapper"
                style="cursor: text;"
              >
                <label
                  class="absolute pointer-events-none origin-top-left shrink-0 rtl:origin-top-right subpixel-antialiased block text-foreground-500 after:content-['*'] after:text-danger after:ms-0.5 will-change-auto !duration-200 !ease-out motion-reduce:transition-none transition-[transform,color,left,opacity,translate,scale] group-data-[filled-within=true]:text-foreground group-data-[filled-within=true]:pointer-events-auto pb-0 z-20 top-1/2 -translate-y-1/2 group-data-[filled-within=true]:start-0 start-3 end-auto text-small group-data-[filled-within=true]:-translate-y-[calc(100%_+_var(--heroui-font-size-small)/2_+_20px)] pe-2 max-w-full text-ellipsis overflow-hidden"
                  data-slot="label"
                  for="delivery_phone"
                  id="react-aria-«replaced-aria-id»"
                >
                  Phone
                </label>
                <div
                  class="inline-flex w-full items-center h-full box-border"
                  data-slot="inner-wrapper"
                >
                  <input
                    aria-label="Phone"
                    aria-labelledby="delivery_phone react-aria-«replaced-aria-id»"
                    autocomplete="off"
                    class="w-full font-normal bg-transparent !outline-solid placeholder:text-foreground-500 focus-visible:outline-solid outline-transparent data-[has-start-content=true]:ps-1.5 data-[has-end-content=true]:pe-1.5 data-[type=color]:rounded-none file:cursor-pointer file:bg-transparent file:border-0 autofill:bg-transparent bg-clip-text text-small is-filled"
                    data-filled="true"
                    data-filled-within="true"
                    data-slot="input"
                    data-testid="delivery_phone"
                    id="delivery_phone"
                    name="delivery.phone"
                    placeholder=" "
                    required=""
                    tabindex="0"
                    title=""
                    type="text"
                    value="555-DONUT"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-4 flex justify-end"
      >
        <button
          aria-label="Submit form"
          class="group tap-highlight-transparent data-[hover=true]:opacity-hover z-0 group relative inline-flex items-center justify-center box-border appearance-none select-none whitespace-nowrap font-normal subpixel-antialiased overflow-hidden tap-highlight-transparent transform-gpu data-[pressed=true]:scale-[0.97] cursor-pointer outline-solid outline-transparent data-[focus-visible=true]:z-10 data-[focus-visible=true]:outline-2 data-[focus-visible=true]:outline-focus data-[focus-visible=true]:outline-offset-2 px-4 min-w-20 h-10 text-small gap-2 rounded-medium [&>svg]:max-w-[theme(spacing.8)] transition-transform-colors-opacity motion-reduce:transition-none bg-success data-[hover=true]:opacity-hover text-white"
          data-react-aria-pressable="true"
          data-testid="form_submit_button"
          tabindex="0"
          type="submit"
        >
          Submit
        </button>
      </div>
    </form>
  </div>
</div>
`;
